<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">AFG Simcards</string>
<string name="splash_title1">AFG Simcards</string>
<string name="splash_title2">Bundles</string>
<string name="splash_title3">Your Support</string>
<string name="splash_text1">With the AFG Simcards program, you can activate or deactivate any bundle of Afghanistan SIM cards, just by pressing a button.</string>
<string name="splash_text2">With beautiful design and orderly arrangement of packages, Internet packages, voice packages, message packages, international packages, and all kinds of SIM card services.</string>
<string name="splash_text3">Thanks for downloading our app!  We have spent a lot of time to make this app, if you want to support us then please share your valuable and great feedback on Playstore.</string>
<string name="buttonA">Activate</string>
<string name="buttonD">Deactivate</string>
<string name="title_forall">Afghanistan Sim Cards</string>
<string name="splash_next">Continue</string>
<string name="home">Home</string>
<string name="share">Share</string>
<string name="lang">Language</string>
<string name="about">About us</string>
<string name="youtube">YouTube</string>
<string name="donate">Donate</string>
<string name="rate">Rate us</string>
<string name="other">Other apps</string>
<string name="exit">Exit</string>
<string name="afg1">AWCC</string>
<string name="sec_text">All packages and services</string>
<string name="eti1">Etisalat</string>
<string name="roshan1">Roshan</string>
<string name="mtn1">MTN</string>
<string name="salaam1">Salaam</string>
<string name="msg1">Messages</string>
<string name="msg2">Received Messages</string>
<string name="new1">Special Bundles</string>
<string name="new2">Any new bundles</string>
<string name="about_info">AFG SIMCARDS program is to provide convenience for the subscribers of the telecommunications companies of Afghanistan. With this program, you can easily find out about the packages of the telecommunications companies and activate or deactivate them. The information of this program is taken from the official websites of the telecommunications companies.  This program is not affiliated with any telecommunications company. Thank you for your support of your program.</string>
<string name="contact">Contact us:</string>
<string name="version">Version</string>
<string name="developed">Developed by Mohammad Azizi </string>
<string name="email">Email Address: mohammad.afg.contact@gmail.com </string>
<string name="about_toolbar">About us</string>
<string name="afg_call1">Call bundles</string>
<string name="afg_call2">All call bundles</string>
<string name="afg_msg1">Message bundles</string>
<string name="afg_msg2">All message bundles</string>
<string name="afg_internet1">Internet bundles</string>
<string name="afg_internet2">All internet bundles</string>
<string name="afg_inter1">International</string>
<string name="afg_inter2">All international bundles</string>
<string name="eti_call1">Call bundles</string>
<string name="eti_call2">All call bundles</string>
<string name="eti_msg1">Message bundles</string>
<string name="eti_msg2">All message bundles</string>
<string name="eti_internet1">Internet bundles</string>
<string name="eti_internet2">All internet bundles</string>
<string name="eti_inter1">International</string>
<string name="eti_inter2">All international bundles</string>
<string name="roshan_call1">Call bundles</string>
<string name="roshan_call2">All call bundles</string>
<string name="roshan_msg1">Message bundles</string>
<string name="roshan_msg2">All message</string>
<string name="roshan_internet1">Internet bundles</string>
<string name="roshan_internet2">All internet bundles</string>
<string name="roshan_inter1">International</string>
<string name="roshan_inter2">All international bundles</string>
<string name="mtn_call1">Call bundles</string>
<string name="mtn_call2">All call bundles</string>
<string name="mtn_msg1">Message bundles</string>
<string name="mtn_msg2">All message bundles</string>
<string name="mtn_internet1">Internet bundles</string>
<string name="mtn_internet2">All internet bundles</string>
<string name="mtn_inter1">International</string>
<string name="mtn_inter2">All international bundles</string>
<string name="salaam_call1">Call bundles</string>
<string name="salaam_call2">All call bundles</string>
<string name="salaam_msg1">Message bundles</string>
<string name="salaam_msg2">All message bundles</string>
<string name="salaam_internet1">Internet bundles</string>
<string name="salaam_internet2">All internet bundles</string>
<string name="salaam_inter1">International</string>
<string name="salaam_inter2">All international bundles</string>
<string name="salaam_sett1">Services</string>
<string name="salaam_sett2">All sim servics</string>
<string name="afg_sett1">Services</string>
<string name="afg_sett2">All sim servics</string>
<string name="eti_sett1">Services</string>
<string name="eti_sett2">All sim servics</string>
<string name="roshan_sett1">Services</string>
<string name="roshan_sett2">All sim servics</string>
<string name="mtn_sett1">Services</string>
<string name="mtn_sett2">All sim servics</string>

<string name="service_title_checkloan">Check sim loan balance</string>
<string name="service_title_apn">APN SETTINGS</string>
<string name="service_title_addc">Add Credit</string>
<string name="service_title_loan">Requesting Loan</string>
<string name="service_title_3g">3G Activate</string>
<string name="service_title_checkb">Check sim balance</string>
<string name="service_title_transb">Transfer balance</string>
<string name="number">Number</string>
<string name="amount">Amount</string>
<string name="service_title_transm">Tranfer MB</string>
<string name="service_title_loanm">Loan 40 Afs</string>
<string name="service_title_sim"> check sim card number</string>
<string name="number_info">Enter 14 digital numbers</string>
<string name="a_service_info_apn">APN SETTINGS</string>
<string name="a_service_info_loan">dial *707# for requesting loan</string>
<string name="a_service_info_3g">this service already activated</string>
<string name="a_service_info_checkb">dial *123# for checking account balance</string>
<string name="a_service_info_transb">Transfer balance</string>
         <!--these are buttons-->
<string name="b_add_c">Add credit</string>
<string name="b_trans">Transfer</string>
<string name="b_loan">Loan</string>
<string name="b_check_c">Check balance</string>
<string name="b_activate">Activate</string>


<string name="e_service_info_loan">Send SIM word to 3378 for requesting loan</string>
<string name="e_service_info_3g">Send 3G word to 3378 for activating 3G</string>
<string name="e_service_info_checkb">dial *123# for checking account balance</string>
<string name="service_title_4g">Activate 4G</string>
<string name="e_service_info_4g">Send 4G word to 3378 for activate 4G</string>


<string name="s_service_info_loan">Dial *742# for requesting loan</string>
<string name="s_service_info_3g">Send Data word to 740 for activating 3G</string>
<string name="s_service_info_checkb">dial *888# for checking account balance</string>

<string name="m_service_info_checkloan">APN SETTINGS</string>
<string name="m_service_info_loan">Send 10 or 60 to 404 for requesting loan</string>
<string name="m_service_info_3g">Send empty message to 667 for activating 3G</string>
<string name="m_service_info_checkb">dial *789# for checking account balance</string>

<string name="r_service_info_checkn">Dial *8# for checking sim card number </string>
<string name="r_service_info_loanm">Send L 200 to 200 for requesting 100MB internet</string>
<string name="r_service_info_transm">The maximum sending per day is 150 MB, the cost is 5 Afghanis, the number is about 10,20,30,40,50</string>
<string name="r_service_info_loan">Dial *122# for requesting 40 afs loan</string>
<string name="r_service_info_3g">Send 3G word to 555 for activating 3G</string>
<string name="r_service_info_checkb">dial *444# for checking account balance</string>

<string name="rate_info"> Do you like our app?</string>
<string name="telegram">Telegram</string>

<string name="title">call to 13 countries</string>
<string name="price">1 Afs</string>
<string name="info">3.75 afghanis per minute you can call to 13 countries. Pakistan, India, the United States, Canada, Sweden, Norway, Australia, Bulgaria, Bangladesh, Denmark, Belgium, China and Malaysia at 3.75 afghanis per minute. The daily fee is 1 Afs</string>
</resources>